fix: z-index of selectBtn

--- a/src/app/components/Image/Collection/ImageCollectionList.module.scss
+++ b/src/app/components/Image/Collection/ImageCollectionList.module.scss
@@ -19,7 +19,7 @@ $image-size: 150px;
             right: 0;
             width: 2em; 
             height: 2em;
-            z-index: 2;
+            z-index: 1;
             background-color: ohma.$colors-gray-300;
             border-radius: 50%;
             margin: 0.3em;
